<resources>
    <string name="placeholder_similar_content">Similar Content</string>
    <string name="placeholder_textview" translatable="false">TextView</string>
    <string name="placeholder_search_query" translatable="false">Placeholder Search Query</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_settings">Settings</string>

    <string name="app_name" translatable="false">smoovie</string>
    <string name="popular_movie_category">Popular</string>
    <string name="top_rated_movie_category">Top Rated</string>
    <string name="now_playing_movie_category">Now Playing</string>
    <string name="search_movie">Search movie</string>

    <string name="movie_genre_action">Action</string>
    <string name="movie_genre_adventure">Adventure</string>
    <string name="movie_genre_animation">Animation</string>
    <string name="movie_genre_fantasy">Fantasy</string>

    <string name="movie_search_query_result_title">Results for "%1$s"</string>
    <string name="movie_detail_runtime" translatable="false">%1$dh %2$dm</string>

    <string name="settings_title">My Account</string>
    <string name="settings_image_description" translatable="false">settings_profile_icon</string>
    <string name="settings_username" translatable="false">Username</string>
    <string name="settings_header_account_profile">ACCOUNT &amp; PROFILE</string>
    <string name="settings_subscription_type">Membership Plan</string>
    <string name="settings_modify_email">Change Email</string>
    <string name="settings_preview_email" translatable="false">test@email.com</string>
    <string name="settings_modify_password">Change Password</string>
    <string name="settings_header_general">GENERAL</string>
    <string name="settings_language">Language</string>
    <string name="settings_preview_language">English</string>
    <string name="settings_preview_subtitles_language" translatable="false">English</string>
    <string name="settings_header_functionalities">APP EXPERIENCE</string>
    <string name="settings_show_mature_content">Show Mature Content</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_connected_apps">Connected Apps</string>
    <string name="settings_header_privacy" translatable="false">PRIVACY</string>
    <string name="settings_sell_personal_information">Do not sell my personal information</string>
    <string name="settings_header_about">ABOUT</string>
    <string name="settings_need_help">Need Help?</string>
    <string name="settings_log_out">Log Out</string>
    <string name="settings_version">Version 1.0</string>
    <string name="settings_tos">Terms of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>

    <string name="notifications_title">Notifications</string>
    <string name="notifications_general">General Updates</string>
    <string name="notifications_content">Content Updates</string>
    <string name="notifications_promotional">Promotional Updates</string>

    <string name="language_title">Language</string>
    <string name="language_english">English</string>
    <string name="language_italian">Italian</string>

    <string name="error_generic">Generic Error</string>

    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_username">Username</string>
    <string name="auth_login">Login</string>
    <string name="auth_register">Register</string>
    <string name="auth_new_user_register">New user? Register now</string>
    <string name="auth_existing_user_login">Already an user? Login now</string>

    <string name="hint_email">Insert Email Address Here</string>
    <string name="hint_username">Insert Username Here</string>
    <string name="password">Insert Password Here</string>
    <string name="error_login_custom_token" translatable="false">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_login_custom_token_mismatch" translatable="false">The custom token corresponds to a different audience.</string>
    <string name="error_login_credential_malformed_or_expired" translatable="false">The supplied auth credential is malformed or has expired.</string>
    <string name="error_login_invalid_email">The email address is badly formatted.</string>
    <string name="error_login_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_login_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_login_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_login_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>

    <string name="text_validation_success">Validation completed</string>
    <string name="text_validation_error_min_password_length">Password must be at least 6 characters</string>
    <string name="text_validation_error_empty_field">Field must be not empty</string>
    <string name="text_validation_error_email">Email is not valid</string>
    <string name="preferences">My Favourites</string>
    <string name="settings_preferences">Favourites</string>
    <string name="movie_genre_comedy">Comedy</string>
    <string name="movie_genre_crime">Crime</string>
    <string name="movie_genre_documentary">Documentary</string>
    <string name="movie_genre_drama">Drama</string>
    <string name="movie_genre_family">Family</string>
    <string name="movie_genre_history">History</string>
    <string name="movie_genre_horror">Horror</string>
    <string name="movie_genre_music">Music</string>
    <string name="movie_genre_mystery">Mystery</string>
    <string name="movie_genre_romance">Romance</string>
    <string name="movie_genre_sciencefiction" translatable="false">Science Fiction</string>
    <string name="movie_genre_tvmovie" translatable="false">TV Movie</string>
    <string name="preferences_no_films">You don\'t have any Preferences</string>
    <string name="result_not_found">No Result Found</string>
</resources>