<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_movie_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF0000">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView_topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_movie_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAFF00" />

            <TextView
                android:id="@+id/textView_topRated2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/now_playing_movie_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>