<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <RelativeLayout
                android:id="@+id/relative_layout_language_back_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageButton
                    android:id="@+id/imageButton_languageSettings_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:bottomLeftRadius="10dp"
                    android:bottomRightRadius="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="0dp"
                    android:topLeftRadius="10dp"
                    android:topRightRadius="10dp"
                    app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/language_title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <RadioGroup
                    android:id="@+id/radiogroup_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <RadioButton
                        android:id="@+id/radio_language_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/button_padding"
                        android:text="@string/language_english"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />

                    <RadioButton
                        android:id="@+id/radio_language_italian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/button_padding"
                        android:text="@string/language_italian"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />
                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
