<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <RelativeLayout
                android:id="@+id/relative_layout_notifications_back_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageButton
                    android:id="@+id/imageButton_notificationsSettings_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:bottomLeftRadius="10dp"
                    android:bottomRightRadius="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="0dp"
                    android:topLeftRadius="10dp"
                    android:topRightRadius="10dp"
                    app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/notifications_title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <RelativeLayout
                    android:id="@+id/relative_layout_general_updates"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/button_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/notifications_general"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_general_updates"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:clickable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout_content_updates"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:background="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/button_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/notifications_content"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_content_updates"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:clickable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout_promotional_updates"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100dp"
                    android:background="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/button_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/notifications_promotional"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_promotional_updates"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:clickable="true" />

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
